--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.12",
+    "cors": "^2.8.5",
+    "js-cookie": "^3.0.5",
     "next": "15.1.4",
+    "next-connect": "^1.0.0",
     "next-swagger-doc": "^0.4.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-dist": "^5.18.2",
     "swagger-ui-express": "^5.0.1",
     "swagger-ui-react": "^5.18.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
